--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^5.1.5",
     "@prisma/client": "^6.1.0",
     "@prisma/extension-pulse": "^1.2.0",
+    "lucide-react": "^0.469.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
